--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         if (action.type === 'add') {
           newState.push(action.item);
         }
+        else if (action.type === 'remove') {
+          newState.splice(action.index, 1);
+        }
 
         return newState;
       }
@@ -32,10 +35,20 @@
       const container = document.getElementById('container');
       container.innerHTML = '';
       const state = store.getState();
-      state.todos.forEach((todo) => {
+      state.todos.forEach((todo, i) => {
         const e = document.createElement('div');
         e.innerHTML = todo;
         container.appendChild(e);
+
+        e.onclick = () => {
+          store.dispatch({
+            type: 'remove',
+            index: i,
+          });
+          
+        // update page
+        render();
+        };
       });
     };
 
