--- a/index.html
+++ b/index.html
@@ -10,58 +10,6 @@
   <button id="submit-todo">Submit</button>
   <div id="container"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.0/redux.min.js"></script>
-
-  <script>
-    // reducer
-    const reducer = Redux.combineReducers({
-      todos: (state = [], action) => {
-        const newState = Object.assign([], state);
-        if (action.type === 'add') {
-          newState.push(action.item);
-        }
-        else if (action.type === 'remove') {
-          newState.splice(action.index, 1);
-        }
-
-        return newState;
-      }
-    });
-
-    // store
-    const store = Redux.createStore(reducer);
-    
-    // render method
-    const render = () => {
-      const container = document.getElementById('container');
-      container.innerHTML = '';
-      const state = store.getState();
-      state.todos.forEach((todo, i) => {
-        const e = document.createElement('div');
-        e.innerHTML = todo;
-        container.appendChild(e);
-
-        e.onclick = () => {
-          store.dispatch({
-            type: 'remove',
-            index: i,
-          });
-          
-        // update page
-        render();
-        };
-      });
-    };
-
-    // append items to list on submit
-    document.getElementById('submit-todo').onclick = () => {
-      store.dispatch({
-        type: 'add',
-        item: document.getElementById('todo').value,
-      });
-
-      // update page
-      render();
-    };
-  </script>
+  <script src="main.js"></script>
 </body>
 </html>
